# nanovec

./: .antigravityignore  .gitignore  CONTRIBUTING.fr.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.fr.md  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
api/: Cargo.toml
cli/: Cargo.toml
core/: Cargo.toml
docs/: architecture.fr.md  architecture.md  getting_started.fr.md  getting_started.md
storage/: Cargo.toml
